@@ -1,3 +1,14 @@
+/**************************************************************** Before compiling ******************************************************/
+
+Please make sure to have mysql server installed and running, as well as the database tables compiled in your mysql server in order to get 
+the full experience !!
+
+In case you face a javafx error "JavaFX runtime component are missing, and are required to run this application", and if you use eclipse : 
+ -  Go to Run configurations
+ -  Arguments
+ -  And in VM arguments please insert : --module-path "javafx lib PATH that you can find in the 'jars' file" --add-modules javafx.controls,javafx.fxml
+
+/****************************************************************************************************************************************/
 <p align="center">
   <img src="./readme_Img/welcome_page.PNG"/>
 </p>
